--- a/catalog/view/theme/wap/css/overload.css
+++ b/catalog/view/theme/wap/css/overload.css
@@ -359,4 +359,20 @@ content: "\e77a";
 .checkout-cart .input-group .form-control[name^="quantity"]{
 	min-width:50px;height: 42px;
 }
+.cart-bg{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	z-index: 100;
+	background-color: rgba(32, 71, 48, 0.34);
+	text-align: center;
+	display:none;
+}
+.cart-bg .loaders{
+	position:absolute;
+	top:50%;
+	left:50%;
+	margin-left:-33px;
+	margin-top:-12px;
+}
 /* end product */
