--- a/catalog/view/theme/wap/css/font/demo_symbol.html
+++ b/catalog/view/theme/wap/css/font/demo_symbol.html
@@ -141,6 +141,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-xiangshangjiantouquan"></use>
+                    </svg>
+                    <div class="name">向上箭头_圈</div>
+                    <div class="fontclass">#icon-xiangshangjiantouquan</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-dingdan"></use>
                     </svg>
                     <div class="name">订单</div>
