--- a/catalog/view/theme/wap/css/font/demo_unicode.html
+++ b/catalog/view/theme/wap/css/font/demo_unicode.html
@@ -117,6 +117,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe654;</i>
+                    <div class="name">向上箭头_圈</div>
+                    <div class="code">&amp;#xe654;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe61f;</i>
                     <div class="name">订单</div>
                     <div class="code">&amp;#xe61f;</div>
