--- a/catalog/view/theme/wap/css/font/demo_fontclass.html
+++ b/catalog/view/theme/wap/css/font/demo_fontclass.html
@@ -97,6 +97,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-xiangshangjiantouquan"></i>
+                    <div class="name">向上箭头_圈</div>
+                    <div class="fontclass">.icon-xiangshangjiantouquan</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-dingdan"></i>
                     <div class="name">订单</div>
                     <div class="fontclass">.icon-dingdan</div>
