--- a/catalog/view/theme/wap/css/overload.css
+++ b/catalog/view/theme/wap/css/overload.css
@@ -7,14 +7,28 @@ a, a:link, a:active, a:visited, a:hover
 .price-new{
 	color:red;
 	font-weight:bold;
-	font-size:16px;
-	float:right;
+	font-size:18px;
+	float:left;
 }
 .price-old{
 	text-decoration: line-through;	
-	font-size:16px;
+	font-size:14px;
+	float:left;
+	margin-left: 5px;
+}
+.caption a{
+	clear:left;
+	display:block;
+	text-overflow: ellipsis;
+white-space: nowrap;
+overflow: hidden;
+width: 100%;
+color:#333;
+}
+.caption .add-wishlist{
 	float:right;
-	margin-right: 5px;
+	margin-right:20px;
+	
 }
 .product-layout{
 margin-bottom:20px;
@@ -39,11 +53,20 @@ color: #222;
 }
 .totop{
 	position:fixed;
-	right:50px;
-	bottom:50px;
-	width:50px;
-	height:50px;
-
+	right:20px;
+	bottom:20px;
+	width:40px;
+	height:40px;
+	display:block;
+	color:#000;
+	font-size:50px;
+	z-index:99;
+	opacity:0.4;
+	line-height:40px;
+	
+}
+.second {
+	top:40px !important; 
 }
 
 /* mm-menu */
@@ -194,12 +217,18 @@ content: "\e77a";
 	content: "\e8e3";
 	font-size: 20px;
 }
+.fa-check-circle::before{
+	content: "\e605";
+}
 .fa-refresh::before{
 	content: "\e611";
 	font-size: 20px;
 }
 .fa-check::before{
 	content: "\e605";
+}
+.icon-xiangshangjiantouquan{
+	font-size:40px;
 }
 
 /* end 字体图标*/
