手机版第三次修改

--- a/catalog/view/theme/wap/css/demo.css
+++ b/catalog/view/theme/wap/css/demo.css
@@ -68,7 +68,7 @@ padding: 10px;
 	display:block;
 }
 #get-lastest .new-price{
-	color:red;
+	color:#222;
 	font-weight:bold;
 	font-size:18px;
 	float:left;
