--- a/catalog/view/theme/wap/css/overload.css
+++ b/catalog/view/theme/wap/css/overload.css
@@ -5,7 +5,7 @@ a, a:link, a:active, a:visited, a:hover
 }
 
 .price-new{
-	color:red;
+	color:#222;
 	font-weight:bold;
 	font-size:18px;
 	float:left;
@@ -54,7 +54,7 @@ color: #222;
 .totop{
 	position:fixed;
 	right:20px;
-	bottom:20px;
+	bottom:50px;
 	width:40px;
 	height:40px;
 	display:block;
@@ -157,8 +157,8 @@ font-weight:400;
 #currency .dropdown-toggle{
 padding: 0;
 font-size: 16px;
-line-height: 40px;
-
+line-height: 20px;
+margin-top:-2px;
 }
 #currency .dropdown-toggle strong{
 font-weight:400;
